service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weba-service
spec:
  ports:
    - port: 80
  selector:
    app: weba
---
apiVersion: v1
kind: Service
metadata:
  name: webb-service
spec:
  ports:
    - port: 80
  selector:
    app: webb
