ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: weba-service
                port:
                  number: 80
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: webb-service
                port:
                  number: 80
